add more about me text and adjust colors

--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="#About-Me" class="nav-link">About Me</a></li>
-                <li><a href="#" class="nav-link">Projects</a></li>
-                <li><a href="#" class="nav-link">Resume</a></li>
-                <li><a href="#" class="nav-link">Contact Info</a></li>
+                <li><a href="#Projects" class="nav-link">Projects</a></li>
+                <li><a href="#Resume" class="nav-link">Resume</a></li>
+                <li><a href="#ContactInfo" class="nav-link">Contact Info</a></li>
             </ul>
         </nav>
     </header>
@@ -29,13 +29,14 @@
          <section class="column-right">
             <article>
                 My name is Chase Harrington, I am currently training in full-stack coding but currently work in the pest control field. 
-                My current hobbies are playing video games and coding. 
+                My current hobbies are playing video games and coding. I wanted to be an Paleontologist growing up as well as a veterinarian.
+                Now I am looking for a better opportunity as a carrer. Below are a few of my projects that I have been working on.
             </article>
          </section>
         </div>
         <div class="row">
             <section class="column-left">
-                 <h2>Projects</h2>
+                 <h2 id="Projects">Projects</h2>
                 </section>
                  <section class="column-right">
                  <article>
@@ -55,7 +56,7 @@
          </div>
          <div class="row">
              <section class="column-left">
-                <h2>Resume</h2>
+                <h2 id="Resume">Resume</h2>
             </section>
             <section class="column-right">
                 <article>
@@ -74,7 +75,7 @@
          </div>
          <div class="row">
             <section class="column-left">
-                 <h2>Contact Info</h2>
+                 <h2 id="ContactInfo">Contact Info</h2>
             </section>
             <section class="column-right">
                 <article>
