add links to projects and placeholders

--- a/Index.html
+++ b/Index.html
@@ -49,15 +49,22 @@
             <section class="column-right" >
                 <figure>
                      <h2>Scratch Game</h2>
+                     <a href="https://scratch.mit.edu/projects/424046708" target="blank">
                      <img src="./Images/scratch-game.png" alt="Cat and mouse game" width="200" height="200">
+                    </a>
 
                 </figure>
                 <figure>
-                    <h2>blah</h2>
-                    <img src="" alt="">
+                    <h2>Paleontology</h2>
+                    <a href="https://en.wikipedia.org/wiki/Paleontology" target="blank">
+                    <img src="./Images/580God-2.jpg" alt="Raptor Skelleton" width="200" height="200">
+                    </a>
                 </figure>  
                 <figure>
-
+                    <h2></h2>
+                    <a>
+                    <img src="" alt="">
+                    </a>
                 </figure>
 
                 
