add photo for projects section

--- a/Index.html
+++ b/Index.html
@@ -61,9 +61,9 @@
                     </a>
                 </figure>  
                 <figure>
-                    <h2></h2>
-                    <a>
-                    <img src="" alt="">
+                    <h2>LGBT Community</h2>
+                    <a href="https://en.wikipedia.org/wiki/LGBT_community" target="blank">
+                    <img src="./Images/pride-flags-11.jpg" alt="Pride flag" width="200" height="200">
                     </a>
                 </figure>
 
