added section for contact info

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-         <div class="row">
+        <div class="row">
          <section class="column-left">
             <h2 id="About-Me">About Me</h2>
          </section>
@@ -47,25 +47,25 @@
                 <h2 id="Projects">Projects</h2>
             </section>
             <section class="column-right" >
-                <figure>
+                <div id="Scratch">
                      <h2>Scratch Game</h2>
                      <a href="https://scratch.mit.edu/projects/424046708" target="blank">
                      <img src="./Images/scratch-game.png" alt="Cat and mouse game" width="200" height="200">
                     </a>
 
-                </figure>
-                <figure>
+                </div>>
+                <div id="Paleontology">
                     <h2>Paleontology</h2>
                     <a href="https://en.wikipedia.org/wiki/Paleontology" target="blank">
                     <img src="./Images/580God-2.jpg" alt="Raptor Skelleton" width="200" height="200">
                     </a>
-                </figure>  
-                <figure>
+                </div>>  
+                <div id="LGBT">
                     <h2>LGBT Community</h2>
                     <a href="https://en.wikipedia.org/wiki/LGBT_community" target="blank">
                     <img src="./Images/pride-flags-11.jpg" alt="Pride flag" width="200" height="200">
                     </a>
-                </figure>
+                </div>
 
                 
             </section>
@@ -87,6 +87,17 @@
                  <h2 id="ContactInfo">Contact Info</h2>
             </section>
             <section class="column-right">
+                <a>
+                    <h2>Linkedin</h2>
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a>
+                    <h2>Facebook</h2>
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a>
+                    <h2></h2>
+                </a>
 
             </section>
          </div>
