Changed Style.css to style.css and Images to images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <h1 class="name">Chase Harrington</h1>
 
-        <img src="./Images/profile-pic.png" alt="Chase picture" width="250" hieght= "250">
+        <img src="./images/profile-pic.png" alt="Chase picture" width="250" hieght= "250">
 
         <nav>
             <ul>
@@ -53,20 +53,20 @@
                 <div class="project-card">
                      <h2>Scratch Game</h2>
                      <a href="https://scratch.mit.edu/projects/424046708" target="blank">
-                     <img class="img-border" src="./Images/scratch-game.png" alt="Cat and mouse game" width="200" height="200">
+                     <img class="img-border" src="./images/scratch-game.png" alt="Cat and mouse game" width="200" height="200">
                     </a>
 
                 </div>
                 <div class="project-card">
                     <h2>Paleontology</h2>
                     <a href="https://en.wikipedia.org/wiki/Paleontology" target="blank">
-                    <img class="img-border" src="./Images/580God-2.jpg" alt="Raptor Skelleton" width="200" height="200">
+                    <img class="img-border" src="./images/580God-2.jpg" alt="Raptor Skelleton" width="200" height="200">
                     </a>
                 </div>  
                 <div class="project-card">
                     <h2>LGBT Community</h2>
                     <a href="https://en.wikipedia.org/wiki/LGBT_community" target="blank">
-                    <img class="img-border" src="./Images/pride-flags-11.jpg" alt="Pride flag" width="200" height="200">
+                    <img class="img-border" src="./images/pride-flags-11.jpg" alt="Pride flag" width="200" height="200">
                     </a>
                 </div>
 
