add links to social media

--- a/index.html
+++ b/index.html
@@ -79,16 +79,13 @@
                  <h2 id="ContactInfo">Contact Info</h2>
             </section>
             <section class="column-right">
-                <a class="social-icon">
+                <a class="social-icon" href="https://www.linkedin.com/in/chase-harrington-37b67a1b6/" target="blank">
                     <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
                     
                 </a>
-                <a class="social-icon">
+                <a class="social-icon" href="https://www.facebook.com/chase.harrington.14/" target="blank">
                     <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
                     
-                </a>
-                <a>
-                    <h2></h2>
                 </a>
 
             </section>
