add links to github repo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="project-card">
                     <div class="double">
-                        <h2>Eat Da Burger</h2>
+                        <h2><a href="https://github.com/Harrichas/EatDaBurger" target="blank">Eat Da Burger</a></h2>
                     </div>
                     <a href="https://tranquil-crag-01558.herokuapp.com/" target="blank">
                     <img class="img-border" src="./images/burger.png" alt="Eat Da Burger" width="200" height="200">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="project-card">
                     <div class="double">
-                        <h2>Note Taker</h2>
+                        <h2><a href="https://github.com/Harrichas/note_taker" target="blank">Note Taker</a></h2>
                     </div>
                     <a href="https://warm-wave-82515.herokuapp.com/" target="blank">
                     <img class="img-border" src="./images/note_taker.png" alt="Note Taker" width="200" height="200">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="project-card">
                     <div class="double">
-                        <h2>Find My PetFriend (Updated)</h2>
+                        <h2><a href="https://github.com/priteshpatel823/project_2" target="blank">Find My PetFriend (Updated)</a></h2>
                         <p>My Second Project</p>
                     </div>
                     <a href="https://pet-adoption-platform.herokuapp.com/" target="blank">
