--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section class="column-right">
                 <div class="project-card">
                     <div class="double">
-                        <a href="images/Chase_Harrington_Resume.pdf" target="blank">My Resume is here.</a>
+                        <a href="https://drive.google.com/file/d/1fb5nXiTa4o1iYdskR3qQSnT00Y0xbbGW/view?usp=sharing" target="blank">My Resume is here.</a>
                     </div>
                 </div>
             </section>
